# sensei-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PERSONAS.md  LICENSE  LIMITATIONS_ASSESSMENT.md  PERSONA_GAP_ANALYSIS.md  PUBLISHING.md  README.md  UPGRADING.md  V0.3.0_RELEASE_SUMMARY.md  V0.4.0_IMPLEMENTATION_STATUS.md  V0.4.0_ROADMAP.md  V0.5.0_FEATURE_1_SUMMARY.md  V0.5.0_IMPLEMENTATION_STATUS.md  V0.5.0_ROADMAP.md  V0.5.0_TESTING_SUMMARY.md  manual-tasks.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
.serena/: project.yml
docs/: ARCHITECTURE.md  FUTURE_RECOMMENDATIONS_COMPLETE.md  MCP_INTEGRATION_ARCHITECTURE.md  MCP_INTEGRATION_EXAMPLES.md  PRD.md  QUICKSTART.md  README.md  USAGE_GUIDE.md
docs/development/: OPTION_B_ARCHITECTURE.md  ORCHESTRATOR_FIX_SUMMARY.md  ORCHESTRATOR_GAP_ANALYSIS.md
docs/integrations/: CONTEXT7.md  DEMO_IMPLEMENTATION_SUMMARY.md  GITHUB.md  OPENMEMORY.md  PHASE2_DELIVERY_SUMMARY.md  PLAYWRIGHT.md  README.md  SERENA.md  SERENA_INTEGRATION_COMPLETE.md  TAVILY.md
docs/planning/: FUTURE_ROADMAP_SUMMARY.md
examples/: README.md  architecture-refactoring-example.md  auth-security-review-example.md  code-navigation-example.md  github-workflows-example.md  pattern-enforcement-example.md
integrations/: INTEGRATION_GUIDE.md
integrations/github-actions/: sensei-architecture-check.yml  sensei-pr-review.yml
integrations/gitlab-ci/: .gitlab-ci.yml
integrations/pre-commit/: .pre-commit-config.yaml  sensei_consistency_check.py  sensei_cost_check.py  sensei_security_review.py
src/sensei_mcp/: __init__.py  __main__.py  analytics.py  context_detector.py  core-directives.md  demo.py  demo_executor.py  engine.py  exporter.py  mcp_orchestrator.py  merge.py  models.py  orchestrator.py  server.py  session.py
src/sensei_mcp/personas/: __init__.py  base.py  loader.py  registry.py
src/sensei_mcp/personas/skills/: accessibility-specialist.md  ai-ethics-governance.md  data-engineer.md  (+62 more)
tests/: smoke_test.py  test_analytics.py  test_context_hints.py  test_database_architect.py  test_exporter.py  test_merge.py  test_orchestrator_integration.py  test_personas_smoke.py  test_server.py
